@@ -73,7 +73,7 @@ func p_cfg(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if len(r.Form["lonoff"])>0 {
-		common.SetListenTCP(common.IsListenTCP(), true)
+		common.SetListenTCP(!common.IsListenTCP(), true)
 		http.Redirect(w, r, "net", http.StatusFound)
 		return
 	}
